// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as anchor 1`] = `
<a
  className="BaseButton-root"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
>
  Push Me
</a>
`;

exports[`renders correctly 1`] = `
<button
  className="BaseButton-root my-class"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  type="button"
>
  Push Me
</button>
`;
